# futures-glib-rs

./: .travis.yml  Cargo.toml  appveyor.yml  circle.yml
.circleci/: config.yml
examples/: interval.rs  nested-loop.rs  remote.rs  tcp.rs  timeout.rs
src/: core.rs  error.rs  future.rs  interval.rs  io.rs  lib.rs  rt.rs  stack.rs  timeout.rs  utils.rs
src/io/: mod.rs  state.rs
src/net/: mod.rs  tcp.rs
tests/: context.rs  executor.rs  loop.rs  mio.rs  source.rs  tcp.rs
