[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
name = "futures-glib"
version = "0.1.0"

[dependencies]
bytes = "^0.4.2"
futures = "^0.1.14"
libc = "^0.2.2"
net2 = "0.2"
slab = "^0.3.0"
tokio-io = "0.1"
winapi = "^0.2.8"

[dependencies.glib-sys]
features = ["v2_36"]
version = "0.3"

[dependencies.tokio-core]
git = "https://github.com/antoyo/tokio-core"

[dev-dependencies]
gtk = "0.1"
mio = "^0.6.9"

[features]
nightly = []
