[package]
authors = ["Antoni Boucher <bouanto@zoho.com>", "Alex Crichton <alex@alexcrichton.com>"]
categories = ["asynchronous"]
description = "Spawn futures on the glib event loop"
license = "MIT"
name = "futures-glib"
repository = "https://github.com/antoyo/futures-glib-rs"
version = "0.2.0"

[dependencies]
bytes = "^0.4.2"
futures = "^0.1.14"
libc = "^0.2.2"
net2 = "0.2"
slab = "^0.3.0"
tokio-io = "0.1"
winapi = "^0.2.8"

[dependencies.glib-sys]
features = ["v2_36"]
version = "0.4"

[dev-dependencies]
gtk = "0.1"

[features]
nightly = []
